--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./css/form.css" /> -->
+    <link rel="stylesheet" href="./css/form.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Form</title>
   </head>
@@ -12,6 +12,18 @@
     <section>
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 3</h1>
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" class="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" class="message" rows="8"></textarea>
+        </label>
+        <button type="submit" class="form-btn">Submit</button>
+      </form>
+      
     </section>
     <script src="./js/2-form.js" type="module"></script>
   </body>
